[metadata]
name = pyclts
version = 3.2.0
author = Johann-Mattis List, Cormac Anderson, Tiago Tresoldi, and Robert Forkel
author_email = mattis.list@lingpy.org
description = Programmatic access to CLTS
long_description = file: README.md
long_description_content_type = text/markdown
keywords = linguistics
license = Apache 2.0
license_files = LICENSE
url = https://github.com/cldf-clts/pyclts
project_urls =
    Bug Tracker = https://github.com/cldf-clts/pyclts/issues
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    attrs>=18.2
    pybtex
    clldutils>=3.8
    pycldf
    cldfcatalog>=1.3
    csvw>=1.6
    uritemplate
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
pycldf =
    components/*
    modules/*

[options.entry_points]
console_scripts =
    clts = pyclts.__main__:main

[options.extras_require]
dev =
    lingpy
    tox
    flake8
    wheel>=0.36
    twine
    build
test =
    pytest>=5
    pytest-mock
    pytest-cov
    coverage>=4.2

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,W503
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov

[easy_install]
zip_ok = false

[coverage:run]
source =
    pyclts
    tests

[coverage:report]
show_missing = true
skip_covered = true

[tox:tox]
envlist = py38, py39, py310, py311, py312
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
